# Memoire

./: .gitignore  README.md
Cedric_Diagrams/: SolidFCC.h  SolidPhase.h  UniformPhases.h  compile_everything.sh
Cedric_Diagrams/CoexistenceSolid/: CMakeLists.txt
Cedric_Diagrams/CoexistenceUniform/: coexistenceUniform.cpp  plotCoexPoly.cpp  plotMuDiffFromRho.cpp
Cedric_Diagrams/DFTAll/: dftAll.cpp
Cedric_Diagrams/DFTMinimizeUniform/: CMakeLists.txt  minimizeUniformDensity.cpp
Cedric_Diagrams/Diagram/: CMakeLists.txt
Cedric_Diagrams/FindFluidDensitiesFromkTMu/: CMakeLists.txt  (+3 more)
Cedric_Diagrams2/: SolidPhase.h  UniformPhases.h  compile_everything.sh  utilities.cpp  workflow.sh
Cedric_Diagrams2/criticalPoint/: CMakeLists.txt  criticalPoint.cpp
Cedric_Frenkel/: Frenkel_WHDF_rc12.h  Frenkel_WHDF_rc2.h  coexCurveFS_rc12.cpp  coexCurveLS_rc2.cpp  coexCurveVL_rc2.cpp  coexCurveVS_rc2.cpp
Cedric_Memoire_Code/: .gitignore  SolidDensity.h  SolidPhase.h  UniformPhases.h  compile_everything.sh  utilities.cpp  utilities.h
Cedric_Memoire_Data/: .gitignore
Cedric_Memoire_Other/: .gitignore
Cedric_Plotential/: CMakeLists.txt  compile.sh  plot_potential.cpp
LJSolidFCC/: CMakeLists.txt  SolidFCC.h  SolidPhase.cpp  SolidPhase.h  dftComputations.cpp  ljsolidfcc.cpp  utilities.cpp
LJUniformFluid/: CMakeLists.txt  UniformDensity.h  UniformFluid.cpp  UniformFluid.h  coexistence.cpp  findRootdOmegadRho.cpp  minimizeUniformDensity.cpp  plotCoexPoly.cpp  plotMuDiffFromRho.cpp  plotUniformFluidOmega.cpp  plotUniformFluidOmegaDerivative.cpp  plotUniformFluidOmegaDerivative2.cpp
LJ_FCC/: .gitignore  SolidPhase.h  compile_everything.sh  utilities.h
(+262 files in other folders)
